--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,33 +1,34 @@
-{% set name = "types-typed-ast" %}
 {% set version = "1.5.8.7" %}
 
-
 package:
-  name: {{ name|lower }}
+  name: types-typed-ast
   version: {{ version }}
 
 source:
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/types-typed-ast-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/t/types-typed-ast/types-typed-ast-{{ version }}.tar.gz
   sha256: f7795f6f9d597b35212314040b993f6613b51d81738edce3c1e3a3e9ef655124
 
 build:
   number: 1
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script:
+    - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --disable-pip-version-check
 
 requirements:
   host:
     - pip
     - python {{ python_min }}
+    - setuptools
   run:
     - python >={{ python_min }}
 
 test:
   requires:
+    - pip
     - python {{ python_min }}
   commands:
+    - pip check
     - test -f $SP_DIR/typed_ast-stubs/__init__.pyi
-
 
 about:
   home: https://github.com/python/typeshed
